fix mobile version fix overflow content

--- a/manager/media/style/MODxRE2_DropdownMenu/css/fonts.css
+++ b/manager/media/style/MODxRE2_DropdownMenu/css/fonts.css
@@ -1,9 +1,9 @@
 html { font-size: 16px }
 @media (max-width: 900px) {
-html { font-size: 15px; }
+html { font-size: 16px; }
 }
 @media (max-width: 400px) {
-html { font-size: 15px; }
+html { font-size: 16px; }
 }
 body { font-weight: normal; font-style: normal; font-size: 0.8rem; line-height: 1.5; font-family: sans-serif; -webkit-font-smoothing: subpixel-antialiased }
 /* For Arabic Font */
