--- a/manager/media/style/MODxRE2_DropdownMenu/css/page.css
+++ b/manager/media/style/MODxRE2_DropdownMenu/css/page.css
@@ -26,12 +26,15 @@
 .sidebar-closed #tree { width: 0 !important; }
 .sidebar-closed #main, .sidebar-closed #resizer { left: 0 !important; }
 @media (max-width: 840px) {
+#floater { left: 0; right: 0; margin: 0 auto; }
 #resizer { display: none }
+#frameset #mask_resizer { z-index: 3 !important; opacity: 0.5; visibility: visible; background-color: #000; -webkit-transition: 0.2s; transition: 0.2s }
+.sidebar-closed #frameset #mask_resizer { opacity: 0; visibility: hidden; }
 #tree { z-index: 5; width: auto !important; box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25); -webkit-transition: 0.25s; transition: 0.25s }
 .sidebar-closed #tree { width: auto !important; box-shadow: none; -webkit-transform: translate3d(-100%, 0, 0); transform: translate3d(-100%, 0, 0); }
 #tree .treeframebody { box-shadow: none }
 #main { left: 0 !important; }
-#tree + #main::before { content: ""; position: absolute; z-index: 9999; left: 0; top: 0; right: 0; bottom: 0; background-color: rgba(0, 0, 0, .1); }
+#main::before { content: ""; position: absolute; z-index: 9999; left: 0; top: 0; right: 0; bottom: 0; background-color: rgba(0, 0, 0, 0); }
 .sidebar-closed #mainMenu:not(.show) + #tree + #main::before { display: none }
 }
 @keyframes modx-color {
